--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+
+v2rayMui/Resources/v2ray-core
+
