--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -19,10 +19,15 @@ permissions:
 
 jobs:
   build-arm64:
-    runs-on: macos-14  # Apple Silicon runner
+    runs-on: macos-15  # Apple Silicon runner with Xcode 16 support
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Select Xcode 16.2
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.2'
 
       - name: Resolve tag name
         run: |
@@ -51,6 +56,7 @@ jobs:
             -scheme v2rayMui \
             -configuration Release \
             -derivedDataPath build \
+            -destination 'generic/platform=macOS' \
             -arch arm64 \
             CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY=""
 
@@ -95,7 +101,7 @@ jobs:
             v2rayMui-macos-arm64-${{ env.TAG_NAME }}.dmg
 
   build-x86_64:
-    runs-on: macos-13  # Intel runner
+    runs-on: macos-15  # Use macOS Sequoia with Xcode 16; cross-compile x86_64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -108,6 +114,11 @@ jobs:
             echo "TAG_NAME=${GITHUB_REF_NAME}" >> $GITHUB_ENV
           fi
           echo "IS_PRERELEASE=${{ github.event.inputs.prerelease || 'false' }}" >> $GITHUB_ENV
+
+      - name: Select Xcode 16.2
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.2'
 
       - name: Show Xcode version
         run: |
@@ -127,7 +138,9 @@ jobs:
             -scheme v2rayMui \
             -configuration Release \
             -derivedDataPath build \
+            -destination 'generic/platform=macOS' \
             -arch x86_64 \
+            ONLY_ACTIVE_ARCH=NO \
             CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY=""
 
       - name: Locate app
