--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -57,7 +57,6 @@ jobs:
             -configuration Release \
             -derivedDataPath build \
             -destination 'generic/platform=macOS' \
-            -arch arm64 \
             CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY=""
 
       - name: Locate app
@@ -138,8 +137,7 @@ jobs:
             -scheme v2rayMui \
             -configuration Release \
             -derivedDataPath build \
-            -destination 'generic/platform=macOS' \
-            -arch x86_64 \
+            -destination 'platform=macOS,arch=x86_64' \
             ONLY_ACTIVE_ARCH=NO \
             CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY=""
 
